# open-vernacular-ai-kit

./: README.md  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: docker.yml  docs.yml  release.yml
demo/: README.md  streamlit_app.py
docs/: api-service.md  benchmarks.md  cli.md  north-star-metrics.md
docs/cookbook/: batch-cli-recipes.md  dialects.md  integrations.md  llm-uplift-notebook.md  sarvam-teacher.md
docs/data/: downstream_uplift_snapshot.json  llm_uplift_examples.jsonl  north_star_metrics_snapshot.json  sarvam_failure_to_fix_snapshot.json
eval/datasets/: sarvam_teacher_large_profile_reviewed_batch1.jsonl  sarvam_teacher_large_profile_reviewed_batch2.jsonl  sarvam_teacher_large_seed.jsonl  sarvam_teacher_noisy_chat_reviewed_batch1.jsonl  sarvam_teacher_noisy_chat_reviewed_batch2.jsonl  sarvam_teacher_noisy_chat_seed.jsonl  sarvam_teacher_ocr_screenshot_reviewed_batch1.jsonl  sarvam_teacher_ocr_screenshot_reviewed_batch2.jsonl  sarvam_teacher_ocr_screenshot_seed.jsonl  sarvam_teacher_realworld_followup_reviewed_batch1.jsonl  sarvam_teacher_realworld_followup_reviewed_batch2.jsonl  sarvam_teacher_realworld_reviewed_batch1.jsonl  sarvam_teacher_realworld_reviewed_batch2.jsonl  sarvam_teacher_realworld_reviewed_batch3.jsonl  sarvam_teacher_realworld_seed.jsonl  sarvam_teacher_realworld_seed_followup.jsonl  sarvam_teacher_seed.jsonl  sarvam_teacher_seed_reviewed.jsonl  sarvam_teacher_voice_note_reviewed_batch1.jsonl  sarvam_teacher_voice_note_reviewed_batch2.jsonl  sarvam_teacher_voice_note_seed.jsonl  sarvam_teacher_whatsapp_export_reviewed_batch1.jsonl  sarvam_teacher_whatsapp_export_reviewed_batch2.jsonl  sarvam_teacher_whatsapp_export_seed.jsonl
notebooks/: before_after_llm_output.ipynb
scripts/: build_sarvam_failure_seed.py  init_sarvam_review.py  mine_sarvam_candidates.py  promote_sarvam_profile_candidates.py  promote_sarvam_sentence_cases.py  report_sarvam_candidates.py  report_sarvam_failure_to_fix.py  snapshot_downstream_uplift_metrics.py  snapshot_north_star_metrics.py
src/open_vernacular_ai_kit/: __init__.py  api_service.py  cli.py  codemix_render.py  config.py  downstream_snapshots.py  eval_harness.py  language_packs.py  pipeline.py  rag_datasets.py  sarvam_adapters.py  sarvam_promote.py  sarvam_report.py  sarvam_review.py  sarvam_seed.py  sarvam_teacher.py  sarvam_tracking.py  token_lid.py  transliterate.py
src/open_vernacular_ai_kit/_data/: dialect_id_samples.jsonl  dialect_norm_samples.jsonl  language_sentence_cases.jsonl  vernacular_facts_tiny_answer_cases.jsonl  vernacular_facts_tiny_answer_cases_abstention.jsonl  vernacular_facts_tiny_answer_cases_distractor.jsonl  vernacular_facts_tiny_answer_cases_hard.jsonl  (+2 more)
tests/: test_api_service.py  test_codemix.py  test_config_schema.py  test_dialect_eval_packaged.py  test_downstream_snapshots.py  test_eval_harness_language_slices.py  test_eval_harness_uplift.py  test_golden_whatsapp.py  test_language_profile_data.py  test_language_quality.py  test_mine_sarvam_candidates.py  test_pipeline.py  test_sarvam_promote.py  test_sarvam_report.py  test_sarvam_review.py  test_sarvam_seed.py  test_sarvam_teacher.py  test_sarvam_tracking.py  test_transliterate_backend.py  test_v0_5_rag_utils.py
(+2 files in other folders)
